Fix SVG overflow issues?

--- a/index.css
+++ b/index.css
@@ -1,12 +1,20 @@
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   font-size: 12px;
+  height: 100%;
   margin: 0;
   overflow: hidden;
+  width: 100%;
 }
 
 #canvas-anchor {
   display: none;
+}
+
+#canvas-root {
+  left: 0;
+  position: fixed;
+  top: 0;
 }
 
 #context-menu {
